@@ -1,3 +1,8 @@
+2003-09-15  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (::tkchat::LoadHistoryLines): Mask off the alerts
+	during history loading.
+
 2003-09-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Speed up the appearance of history loading by doing
